WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83427
REGRESSION (
r113233
): fast/canvas/webgl/array-message-passing.html crashing on Lion and Snow Leopard bots
https://bugs.webkit.org/show_bug.cgi?id=83427
Summary
REGRESSION (r113233): fast/canvas/webgl/array-message-passing.html crashing o...
Jon Lee
Reported
2012-04-07 11:41:17 PDT
The following test has been crashing on all Lion and Snow Leopard bots since
r113233
fast/canvas/webgl/array-message-passing.html compare
http://build.webkit.org/old-results/Lion%20Release%20(Tests)/r113230%20%287263%29.zip
http://build.webkit.org/old-results/Lion%20Release%20(Tests)/r113233%20%287264%29.zip
Currently being skipped on bots.
Attachments
Fix
(3.12 KB, patch)
2012-04-10 16:20 PDT
,
Dmitry Lomov
dino
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Amended patch (missed Reviewed by)
(3.11 KB, patch)
2012-04-12 11:42 PDT
,
Dmitry Lomov
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2012-04-07 11:41:41 PDT
<
rdar://problem/11206515
>
Dmitry Lomov
Comment 2
2012-04-10 16:20:55 PDT
Created
attachment 136567
[details]
Fix Ooops, apologies, the bug was caused by an incorrect rebase. Here is the fix.
WebKit Review Bot
Comment 3
2012-04-10 20:36:52 PDT
Comment on
attachment 136567
[details]
Fix Rejecting
attachment 136567
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/LayoutTests/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/12384592
Dmitry Lomov
Comment 4
2012-04-12 11:42:04 PDT
Created
attachment 136943
[details]
Amended patch (missed Reviewed by)
WebKit Review Bot
Comment 5
2012-04-12 12:17:06 PDT
Comment on
attachment 136943
[details]
Amended patch (missed Reviewed by) Clearing flags on attachment: 136943 Committed
r114013
: <
http://trac.webkit.org/changeset/114013
>
WebKit Review Bot
Comment 6
2012-04-12 12:17:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug