Source/WebCore: REGRESSION (r113233): fast/canvas/webgl/array-message-passing.html crashing on Lion and Snow Leopard bots. https://bugs.webkit.org/show_bug.cgi?id=83427. Due to incorrect merge by me when landing r113233, call to find got replaces with call to add in checking for duplicates in ObjectPool when serializing.

Reviewed by Dean Jackson.

Covered by existing tests.

* bindings/js/SerializedScriptValue.cpp:
(WebCore::CloneSerializer::checkForDuplicate):

LayoutTests: REGRESSION (r113233): fast/canvas/webgl/array-message-passing.html crashing on Lion and Snow Leopard bots.
https://bugs.webkit.org/show_bug.cgi?id=83427.
Bug fixed, unskipping tests.

Reviewed by Dean Jackson.

* platform/mac/Skipped:


Canonical link: https://commits.webkit.org/101308@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114013 268f45cc-cd09-0410-ab3c-d52691b4dbfc